# terra_hawk_crewai

./: README.md  poem.txt  pyproject.toml
lambda/: reports_api.py
src/terra_hawk_crewai/: main.py
src/terra_hawk_crewai/crews/compliance_crew/: compliance_crew.py
src/terra_hawk_crewai/crews/compliance_crew/config/: agents.yaml  tasks.yaml
src/terra_hawk_crewai/crews/core_crew/: core_crew.py
src/terra_hawk_crewai/crews/core_crew/config/: agents.yaml  tasks.yaml
src/terra_hawk_crewai/crews/crop_crew/: crop_crew.py
src/terra_hawk_crewai/crews/crop_crew/config/: agents.yaml  tasks.yaml
src/terra_hawk_crewai/crews/finance_crew/: finance_crew.py
src/terra_hawk_crewai/crews/finance_crew/config/: agents.yaml  tasks.yaml
src/terra_hawk_crewai/crews/vision_crew/: vision_crew.py
src/terra_hawk_crewai/crews/vision_crew/config/: agents.yaml  tasks.yaml
src/terra_hawk_crewai/tools/: __init__.py  dynamodb_vision_retriever.py  finance_retriever_tool.py  mission_logs_retriever.py  retry_utils.py  s3_image_retriever.py  s3_report_reader.py  s3_report_writer.py  sensor_data_retriever.py  weather_api_tool.py
