[project]
name = "terra_hawk_crewai"
version = "0.1.0"
description = "terra-hawk-crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[bedrock,tools]==1.8.0",
]

[project.scripts]
kickoff = "terra_hawk_crewai.main:kickoff"
run_crew = "terra_hawk_crewai.main:kickoff"
plot = "terra_hawk_crewai.main:plot"
run_with_trigger = "terra_hawk_crewai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
